Restore a piece of BSD history.

PR:		169127
Submitted by:	Ruben de Groot <ruben@hacktor.com>
MFC after:	1 week

Former-commit-id: 18d81e2372b7755813653b651fbd8976b16d49da